# collector-rs

./: .gitignore  Cargo.toml  Dockerfile  config.yaml  config_mlx.yaml  docker-compose.sh
client/: Cargo.toml  build.rs
client/src/: main.rs
client/src/collector/: mod.rs
client/src/grpc_client/: grpc_client.rs  mod.rs
client/src/scraper/: scraper.rs
jtimon-rs/: Cargo.toml  build.rs  config.yaml  config_example.yaml
jtimon-rs/src/: main.rs
jtimon-rs/src/collector/: collector.rs
jtimon-rs/src/collector_client/: collector_client.rs  mod.rs
jtimon-rs/src/grpc/: grpc.rs
protos/: collector.proto
server/: Cargo.toml
server/src/: main.rs
server/src/collector/: collector.rs
server/src/grpc_server/: grpc_server.rs
server/src/prometheus/: prometheus.rs
