[package]
name = "collector-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
tonic = "0.11.0"
anyhow = "1.0.80"
log = "0.4.20"
clap = { version = "4.4.18", features = ["derive"] }
env_logger = "0.11.2"
prost = "0.12.3"
serde = { version = "1.0.197", features = ["derive", "serde_derive"] }
serde-value = "0.7.0"
futures = "0.3.30"
tokio-stream = { version = "0.1.15", features = ["full"] }
serde_yaml = "0.9.34"
hostname = "0.4.0"

[build-dependencies]
tonic-build = "0.11.0"
